--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,8 @@
 
 body {
     background-color: blanchedalmond;
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'Silkscreen', cursive;
 }
 
 header {
@@ -13,6 +15,26 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border-radius: 10px;
+}
+
+h1 {
+    font-size: 100%;
+    font-family: 'silkscreen';
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+h3 {
+    font-size: 80%;
+    text-transform: uppercase;
+    font-family: 'orbitron';
+}
+
+h4 {
+    font-size: 60%;
+    text-transform: uppercase;
+    margin-top: 10px;
 }
 
 /* bug: using flex to center content. The #main parent div will not center #sound-board child div.*/
@@ -28,23 +50,24 @@ header {
 
 /* sound-board structure*/
 .sound-board {
-    width: 320px;
+    width: 310px;
     height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left: 1vw;
+
     border-style: solid;
     border-color: #f44336;
     border-radius: 10px;
     margin-top: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 
 }
 
 #sound-board2 {
     margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .row {
@@ -65,10 +88,12 @@ header {
 }
 
 button {
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 70px;
     padding: 10px;
     margin: 10px;
+    font-family: 'Orbitron', sans-serif;
+
 }
 
 p {
@@ -79,11 +104,12 @@ p {
 
 #nav:link,
 #nav:visited {
-    margin-top: 10px;
+    margin-top: 5px;
     background-color: #f44336;
     color: white;
     padding: 14px 25px;
     text-align: center;
+    font-family: 'Orbitron', sans-serif;
     text-decoration: none;
     display: inline-block;
 }
@@ -123,8 +149,3 @@ input {
     border-color: grey;
 }
 
-#wallpaper {
-    width: 200px;
-    height: auto;
-    margin-top: 10px;
-}
