--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,10 @@ h4 {
 /* bug: using flex to center content. The #main parent div will not center #sound-board child div.*/
 /* solved: unexpected behaviour was occuring with centering elements*/
 
+.audio {
+    display: none;
+}
+
 .main {
     display: flex;
     flex-direction: column;
