--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,9 +101,9 @@ h4 {
     margin-top: 10px;
 }
 
-button {
+.sound-btn {
     width: 70px;
-    height: 70px;
+    height: 50px;
     padding: 10px;
     margin: 10px;
     border-radius: 5PX;
@@ -114,6 +114,55 @@ button {
     background-color: #F7C59F;
 }
 
+.dr {
+    width: 60px;
+    height: 50px;
+    padding: 10px;
+    margin: 10px;
+    margin-left: 20px;
+    border-radius: 5PX;
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'orbitron';
+    letter-spacing: 1px;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: #F7C59F;
+}
+ .dr-lp {
+    width: 60px;
+    height: 40px;
+    padding: 10px;
+    margin: 10px;
+    margin-left: 20px;
+    border-radius: 5PX;
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'orbitron';
+    font-size: x-small;
+    letter-spacing: 1px;
+    text-align: center;
+    text-transform: uppercase;
+    color: white;
+    background-color: blue;
+ }
+
+ .dr-stop {
+        width: 60px;
+        height: 40px;
+        padding: 10px;
+        margin-top: 2px;
+        margin-right: 10px;
+        margin-left: 20px;
+        margin-bottom: 2px;
+        border-radius: 5PX;
+        font-family: 'Orbitron', sans-serif;
+        font-family: 'orbitron';
+        font-size: x-small;
+        letter-spacing: 1px;
+        text-align:center;
+        text-transform: uppercase;
+        color: white;
+        background-color: red;
+    }
 button:active {
     background-color: #FF6B35;
 }
